# craby

./: .gitattributes  .gitignore  .yarnrc.yml  Cargo.toml  README.md  Release.toml  mise.toml  package.json
.github/workflows/: ci.yml
crates/carby/: Cargo.toml
crates/carby/src/: lib.rs
crates/craby_cli/: Cargo.toml
crates/craby_cli/src/: lib.rs
crates/craby_cli/src/commands/: mod.rs
crates/craby_cli/src/commands/clean/: impl.rs
crates/craby_cli/src/commands/codegen/: impl.rs
crates/craby_cli/src/commands/doctor/: assert.rs  impl.rs  mod.rs
crates/craby_cli/src/commands/init/: impl.rs  mod.rs  validators.rs
crates/craby_cli/src/commands/show/: impl.rs  mod.rs  print.rs
crates/craby_cli/src/utils/: mod.rs  schema.rs  template.rs  terminal.rs
crates/craby_codegen/: Cargo.toml
crates/craby_codegen/src/: generator.rs  lib.rs  utils.rs
crates/craby_codegen/src/types/: schema.rs  types.rs
crates/craby_common/: Cargo.toml
crates/craby_common/src/: config.rs  constants.rs  env.rs  lib.rs  logger.rs  macros.rs  utils.rs
crates/craby_core/: Cargo.toml
crates/craby_core/src/: lib.rs  types.rs
crates/craby_core/src/interop/string/: android.rs  ios.rs  mod.rs
examples/0.80/: App.tsx  app.json  metro.config.js  package.json  react-native.config.js
examples/0.80/android/: settings.gradle
examples/0.80/android/app/: build.gradle
examples/0.80/ios/: Podfile
examples/0.80/ios/Craby80/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
examples/0.80/ios/Craby80.xcodeproj/: project.pbxproj
examples/0.80/ios/Craby80.xcodeproj/xcshareddata/xcschemes/: Craby80.xcscheme
examples/0.80/ios/Craby80.xcworkspace/: contents.xcworkspacedata
examples/basic-module/: Basic.podspec  CONTRIBUTING.md  Cargo.toml  README.md  package.json  tsconfig.json
examples/basic-module/android/: build.gradle  gradle.properties
examples/basic-module/crates/android/: Cargo.toml
examples/basic-module/crates/android/src/: lib.rs
examples/basic-module/crates/ios/: Cargo.toml
examples/basic-module/crates/ios/src/: lib.rs
examples/basic-module/crates/lib/: Cargo.toml
examples/basic-module/crates/lib/src/: impls.rs  lib.rs
examples/basic-module/ios/: Basic.h  Basic.mm
examples/basic-module/ios/framework/libbasicmodule.xcframework/: Info.plist
examples/basic-module/ios/framework/libbasicmodule.xcframework/ios-arm64-simulator/Headers/: libbasicmodule.h
examples/basic-module/ios/framework/libbasicmodule.xcframework/ios-arm64/Headers/: libbasicmodule.h
examples/basic-module/lib/module/: NativeBasic.js  NativeBasic.js.map  index.js  index.js.map
examples/basic-module/lib/typescript/src/: NativeBasic.d.ts  NativeBasic.d.ts.map  index.d.ts  index.d.ts.map
examples/basic-module/src/: NativeBasic.ts  index.ts
examples/calculator/: .gitignore  CONTRIBUTING.md  Calculator.podspec  README.md  package.json
examples/calculator-cpp/: CalculatorCpp.podspec  README.md  package.json  tsconfig.json
examples/calculator-cpp/android/: build.gradle  gradle.properties
examples/calculator-cpp/android/src/main/jni/: OnLoad.cpp
examples/calculator-cpp/cpp/: NativeCalculatorCpp.cpp  NativeCalculatorCpp.h
examples/calculator-cpp/ios/: NativeCalculatorCppProvider.h  NativeCalculatorCppProvider.mm
examples/calculator-cpp/lib/module/: NativeCalculator.js  index.js.map
examples/calculator-cpp/lib/typescript/src/: NativeCalculator.d.ts  NativeCalculator.d.ts.map  index.d.ts  index.d.ts.map
examples/calculator-cpp/src/: NativeCalculatorCpp.ts  index.ts
examples/calculator/android/: build.gradle  gradle.properties
examples/calculator/crates/android/: Cargo.toml
examples/calculator/crates/android/src/: lib.rs
examples/calculator/crates/ios/: Cargo.toml
examples/calculator/crates/ios/src/: lib.rs
examples/calculator/crates/lib/: Cargo.toml
examples/calculator/crates/lib/src/: impls.rs  lib.rs
examples/calculator/ios/: Calculator.h  Calculator.mm
examples/calculator/ios/framework/libcrabycalculator.xcframework/: Info.plist
examples/calculator/lib/module/: NativeCalculator.js.map  index.js
examples/calculator/src/: NativeCalculator.ts  index.ts  index.tsx
scripts/: cargo-release.sh  version.sh
(+10 files in other folders)
