[package]
name = "carby"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Carby"
license = "MIT"
repository = "https://github.com/leegeunhyeok/craby"

[features]
default = []
common = ["craby_common"]
codegen = ["craby_codegen"]
cli = ["craby_cli"]

[dependencies]
craby_core    = { path = "../craby_core" }
craby_common  = { path = "../craby_common", optional = true }
craby_codegen = { path = "../craby_codegen", optional = true }
craby_cli     = { path = "../craby_cli", optional = true }
